# wine-classifier

./: .gitignore  package-lock.json  package.json  test_xor.py  xor_examples.py
backend/: .env  main.py  pyproject.toml  requirements.txt  test_mongo.py
backend/models/: crypto_mlp_model.joblib  crypto_scaler.joblib  optimized_mlp_classifier_model.joblib
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/crypto/: page.tsx
frontend/components/: dataset-info.tsx  header.tsx  iterations-comparison.tsx  prediction-form.tsx  prediction-history.tsx  results-display.tsx  training-panel.tsx
frontend/lib/: api.ts
