[project]
name = "wine-classifier-backend"
version = "0.1.0"
description = "Wine Classification API with MLPClassifier"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
]
